--- a/TCMSFRONTEND/Views/Modules/ContentsList/ItemList.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/ItemList.html
@@ -21,7 +21,7 @@
             {{/each}}
         </ul>
     </section>
-    <footer class="panel-footer">
+    <!--<footer class="panel-footer">
         <div class="text-center _margin-top">
             <ul class="pagination">
                 <li><a href="#">1</a></li>
@@ -32,5 +32,5 @@
                 <li><a href="#">6</a></li>
             </ul>
         </div>
-    </footer>
+    </footer>-->
 </div>
