--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -84,6 +84,7 @@
 	    li {
 		position: relative;
 		figure {
+            height: 640px; max-height: 640px;
 		    & > a, & > img {
 			display: block;
 		    }
