--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -2,7 +2,7 @@
     <ul class="list-unstyled list-inline">
         <li class="active"><a href="/">Home</a></li>
         <li>
-            <a href="#">Programs</a>
+            <a href="#">Programs&nbsp;<i class="caret"></i></a>
             <div class="child">
                 <ul class="list-unstyled">
                     <li><a href="/category/Art/153">Art</a></li>
