About and contact us pages

--- a/TCMSFRONTEND/Views/Modules/Static/Contact.html
+++ b/TCMSFRONTEND/Views/Modules/Static/Contact.html
@@ -1,64 +1,57 @@
-<div class="page-header">
-    <h2>Contacta con Nosotros</h2>
-</div>
-<div id="item" class="upload-form">
-    <div id="map" class="item-media map"></div>
-    <p><strong>HispanTV - Número 4, Calle 2 este, Avenida Farhang, Saadat Abad, Teherán, Irán</strong></p>
-    <p><strong><span class="text-red">Tel:</span> +98 21 23066700</strong></p>
-    <p><strong><span class="text-red">Fax:</span> +98 21 23066700</strong></p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>Ud. puede enviar sus comentarios y opiniones a las siguientes direcciones:</p>
-    <p>&nbsp;</p>
-    <p><strong>Las relaciones internacionales y públicas: <a href="#"><span class="text-red">ri@hispantv.com</span></a></strong></p>
-    <p><strong>Página Web: <a href="#"><span class="text-red">web@hispantv.com</span></a></strong></p>
-    <p><strong>Recursos Humanos: <a href="#"><span class="text-red">rrhh@hispantv.com</span></a></strong></p>
-    <p><strong>Consultas Generales: <a href="#"><span class="text-red">info@hispantv.com</span></a></strong></p>
-</div>
-<div class="row">
-    <div class="col-xs-12 col-md-12">
-        <div class="item-comments">
-            <div class="panel title-border comments">
-                <div class="panel-title">
-                    <span>Commentarios</span>
-                </div>
-                <div class="panel-body">
-                    <div role="tabpanel">
-                        <div id="hypercomments_widget"></div>
-                        <script type="text/javascript">
-                            _hcwp = window._hcwp || [];
-                            _hcwp.push({ widget: "Stream", widget_id: 26167, xid: "staticcontact", hc_disable: 1, quote_disable: 1, social: "google, facebook, twitter, openid", comments_level: 2 });
-                            (function () {
-                                if ("HC_LOAD_INIT" in window) return;
-                                HC_LOAD_INIT = true;
-                                var lang = "es";
-                                var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
-                                hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/26167/" + lang + "/widget.js";
-                                var s = document.getElementsByTagName("script")[0];
-                                s.parentNode.insertBefore(hcc, s.nextSibling);
-                            })();
-                        </script>
+<article id="item">
+    <div class="wrapper _default">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-8">
+                    <div class="panel item">
+                        <section class="panel-body">
+                            <div class="item-desc">
+                                <h2 class="item-title">Contact us</h2>
+                                <div class="item-text">
+                                    <div class="introtext">
+                                        <p><strong><span class="">Fax: </span>+98 21 23066529</strong></p>
+                                        <p><strong>Email: <a href="mailto:iran@presstv.com"><span class="">Iran@presstv.com</span></a></strong></p>
+                                        <p><strong>Facebook: <a href="https://www.facebook.com/IranPressTV"><span class="">iran Program on Facebook</span></a></strong></p>
+                                        <p><strong>Youtube: <a href="https://www.youtube.com/user/iranprogrampresstv"><span class="">https://www.youtube.com/user/iranprogrampresstv</span></a></strong></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-sharing">
+                                <div class="inner">
+                                    <h4>Share</h4>
+                                    <ul class="list-unstyled list-inline">
+                                        <li class="fb"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://iran.presstv.ir{{Data.url}}"><i class="icon-facebook"></i></a></li>
+                                        <li class="tw"><a target="_blank" href="https://twitter.com/home?status=http://iran.presstv.ir{{Data.url}}"><i class="icon-twitter"></i></a></li>
+                                        <li class="gp"><a target="_blank" href="https://plus.google.com/share?url=http://iran.presstv.ir{{Data.url}}"><i class="icon-gplus"></i></a></li>
+                                        <li class="em"><a href="#"><i class="icon-email"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="item-comments">
+                                <div class="inner">
+                                    <div id="hypercomments_widget"></div>
+                                    <script type="text/javascript">
+                                        _hcwp = window._hcwp || [];
+                                        _hcwp.push({ widget: "Stream", widget_id: 29636,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
+                                        (function () {
+                                            if ("HC_LOAD_INIT" in window) return;
+                                            HC_LOAD_INIT = true;
+                                            var lang = "en";
+                                            var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
+                                            hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/29636/" + lang + "/widget.js";
+                                            var s = document.getElementsByTagName("script")[0];
+                                            s.parentNode.insertBefore(hcc, s.nextSibling);
+                                        })();
+                                    </script>
+                                </div>
+                            </div>
+                        </section>
                     </div>
+                </div>
+                <div id="sidebar" class="col-xs-12 col-md-4">
+
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-<script>
-    function initialize() {
-        var myLatlng = new google.maps.LatLng(35.7897894, 51.3848205);
-        var mapOptions = {
-            zoom: 17,
-            center: myLatlng
-        };
-        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            title: 'Hispan TV'
-        });
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-</script>
+</article>
