--- a/TCMSFRONTEND/Views/Modules/Static/About.html
+++ b/TCMSFRONTEND/Views/Modules/Static/About.html
@@ -1,65 +1,55 @@
-<div class="page-header">
-    <h2>¿QUÉ ES HISPANTV?</h2>
-</div>
-<div id="slideshow" class="row">
-    <div class="col-xs-12">
-        <div class="panel slideshow">
-            <div class="panel-body">
-                <ul class="list-unstyled">
-                    <li class="item">
-                        <div class="inner">
-                            <div class="img">
-                                <img src="/Views/Assets/data/about.jpg" alt="¿QUÉ ES HISPANTV?" />
+<article id="item">
+    <div class="wrapper _default">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-8">
+                    <div class="panel item">
+                        <section class="panel-body">
+                            <div class="item-desc">
+                                <h2 class="item-title">About us</h2>
+                                <div class="item-text">
+                                    <div class="introtext">
+                                        <p>The "Iran" program is a 25 minute weekly show that explores Iran's past, present, and future with exclusive reports.</p>
+                                        <p>Through "Iran", we do our best to help our audience discover this ancient land anew and get acquainted with its art and culture.</p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="title">
-                                <h2>
-                                    <a href="#">Con una parrilla programática de 24 horas continuas al día, HispanTV pone a disposición de sus usuarios un servicio satelital y digital, con una cobertura total dirigida a los países de habla hispana, solventada por profesionales de las áreas informativa, programática, documental y técnica, con un alto espíritu de vocación.</a>
-                                </h2>
+                            <div class="item-sharing">
+                                <div class="inner">
+                                    <h4>Share</h4>
+                                    <ul class="list-unstyled list-inline">
+                                        <li class="fb"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http://iran.presstv.ir{{Data.url}}"><i class="icon-facebook"></i></a></li>
+                                        <li class="tw"><a target="_blank" href="https://twitter.com/home?status=http://iran.presstv.ir{{Data.url}}"><i class="icon-twitter"></i></a></li>
+                                        <li class="gp"><a target="_blank" href="https://plus.google.com/share?url=http://iran.presstv.ir{{Data.url}}"><i class="icon-gplus"></i></a></li>
+                                        <li class="em"><a href="#"><i class="icon-email"></i></a></li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="item">
-    <h3>NEXO LATINO</h3>
-    <p>El origen de HispanTV se concibió para ser un puente de integración y mostrar los aspectos culturales y sociopolíticos entre Irán e hispanohablantes.</p>
-    <h3>OBJETIVOS</h3>
-    <p>Poner a disposición una completa plataforma mediática, ser fiel reflejo de la actualidad contemporánea y proyectar la realidad social, reconociéndose así como opción concreta para el intercambio cultural.</p>
-    <h3>MISIÓN Y VISIÓN</h3>
-    <p><strong>Misión:</strong></p>
-    <p>Trabajar bajo el férreo compromiso como medio de comunicación para fomentar el acercamiento entre los pueblos de Irán, el Hispanoamericano y los de Medio Oriente, considerando además la necesidad de crear una mayor cercanía entre todos los pueblos de América Latina.</p>
-    <p><strong>Visión:</strong></p>
-    <p>En HispanTV queremos reflejar los hechos de quienes los protagonizan.</p>
-</div>
-<div class="row">
-    <div class="col-xs-12 col-md-12">
-        <div class="item-comments">
-            <div class="panel title-border comments">
-                <div class="panel-title">
-                    <span>Commentarios</span>
-                </div>
-                <div class="panel-body">
-                    <div role="tabpanel">
-                        <div id="hypercomments_widget"></div>
-                        <script type="text/javascript">
-                            _hcwp = window._hcwp || [];
-                            _hcwp.push({ widget: "Stream", widget_id: 26167, xid: "staticabout", hc_disable: 1, quote_disable: 1, social: "google, facebook, twitter, openid", comments_level: 2 });
-                            (function () {
-                                if ("HC_LOAD_INIT" in window) return;
-                                HC_LOAD_INIT = true;
-                                var lang = "es";
-                                var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
-                                hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/26167/" + lang + "/widget.js";
-                                var s = document.getElementsByTagName("script")[0];
-                                s.parentNode.insertBefore(hcc, s.nextSibling);
-                            })();
-                        </script>
+                            <div class="item-comments">
+                                <div class="inner">
+                                    <div id="hypercomments_widget"></div>
+                                    <script type="text/javascript">
+                                        _hcwp = window._hcwp || [];
+                                        _hcwp.push({ widget: "Stream", widget_id: 29636,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
+                                        (function () {
+                                            if ("HC_LOAD_INIT" in window) return;
+                                            HC_LOAD_INIT = true;
+                                            var lang = "en";
+                                            var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true;
+                                            hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://w.hypercomments.com/widget/hc/29636/" + lang + "/widget.js";
+                                            var s = document.getElementsByTagName("script")[0];
+                                            s.parentNode.insertBefore(hcc, s.nextSibling);
+                                        })();
+                                    </script>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
+                <div id="sidebar" class="col-xs-12 col-md-4">
+                    
+                </div>
             </div>
         </div>
     </div>
-</div>
+</article>
