Changes in item page

--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -82,7 +82,7 @@
                                         <figcaption>
                                             <a href="{{url}}">
                                                 <span class="title">{{Title}}</span>
-                                                <span class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
+                                                <span class="desc">{{Introtext}}</span>
                                             </a>
                                         </figcaption>
                                     </figure>
