--- a/TCMSFRONTEND/Views/Modules/Static/About.html
+++ b/TCMSFRONTEND/Views/Modules/Static/About.html
@@ -30,7 +30,7 @@
                                     <div id="hypercomments_widget"></div>
                                     <script type="text/javascript">
                                         _hcwp = window._hcwp || [];
-                                        _hcwp.push({ widget: "Stream", widget_id: 29636,xid: "c" + {{Data.Id}} ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
+                                        _hcwp.push({ widget: "Stream", widget_id: 29636,xid: "iran-cAbout" ,hc_disable:1,quote_disable:1,social:"google, facebook, twitter, openid",comments_level:2});
                                         (function () {
                                             if ("HC_LOAD_INIT" in window) return;
                                             HC_LOAD_INIT = true;
