Working on panorama page

--- a/TCMSFRONTEND/Views/Assets/less/project/responsive.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/responsive.less
@@ -5,10 +5,12 @@
         .owl-controls { z-index: 80; }
          ul li figure { height: 530px; }
     }
+    .panel.panorama ul li a { max-height: 147px !important; }
 }
 // SM
 @media (max-width: @screen-sm-max) { 
     .panel.showcase ul li figure { height: auto !important; }
+    .panel.panorama ul li a { max-height: 173px !important; }
     #menu {
 	    margin: 0; position: absolute; width: 100%; left: 0; top: 80px; background: #f7f7f7; display: none; z-index: 2000;
 	    ul {
@@ -27,4 +29,5 @@
 // XS
 @media (max-width: @screen-xs-max) {
     .panel.showcase ul li figure { height: auto !important; }
+    .panel.panorama ul li a { max-height: none !important; }
 }
