--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -209,4 +209,28 @@
 	    }
 	}
     }
+    &.panorama {
+        ul {
+            padding: 0; list-style: none;
+            li {
+                margin-bottom: @grid-gutter-width;
+                a {
+                    display: block; position: relative; max-height: 131px; overflow: hidden;
+                    &:after {
+                            content: ''; display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: tomato; z-index: 12;
+                            background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+                            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
+                            background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                            background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                            background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                            background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+                            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+                    }
+                    .caption { position: absolute; bottom: 0; left: 0; width: 100%; color: #fff; padding: 10px; font-size: 16px; z-index: 90; }
+                    img { display: block; width: 100%; height: auto; }
+                }
+            }
+        }
+        .modal-body { padding: 0; }
+    }
 }
