Working on Panorama module

--- a/TCMSFRONTEND/Views/Modules/Static/Panorama.html
+++ b/TCMSFRONTEND/Views/Modules/Static/Panorama.html
@@ -525,7 +525,7 @@
                 </li>
             </ul>
         </div>
-        <div id="parorama-modal" class="modal fade zoom-out">
+        <div id="parorama-modal" class="modal fade">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-body">
