Bugfix in panorama tiles

--- a/TCMSFRONTEND/Views/Assets/less/project/responsive.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/responsive.less
@@ -1,3 +1,6 @@
+@media (min-width: @screen-lg-min) {
+    .panel.panorama ul li a { max-height: 131px !important; }
+}
 // MD
 @media (min-width: @screen-md-min) {
     #menu { display: block !important; }
@@ -5,12 +8,12 @@
         .owl-controls { z-index: 80; }
          ul li figure { height: 530px; }
     }
-    .panel.panorama ul li a { max-height: 147px !important; }
+    .panel.panorama ul li a { max-height: 147px; }
 }
 // SM
 @media (max-width: @screen-sm-max) { 
     .panel.showcase ul li figure { height: auto !important; }
-    .panel.panorama ul li a { max-height: 173px !important; }
+    .panel.panorama ul li a { max-height: 173px; }
     #menu {
 	    margin: 0; position: absolute; width: 100%; left: 0; top: 80px; background: #f7f7f7; display: none; z-index: 2000;
 	    ul {
