Added image to about module

--- a/TCMSFRONTEND/Views/Modules/Static/About.html
+++ b/TCMSFRONTEND/Views/Modules/Static/About.html
@@ -5,6 +5,11 @@
                 <div class="col-xs-12 col-md-8">
                     <div class="panel item">
                         <section class="panel-body">
+                            <div class="item-media">
+                                <figure>
+                                    <img alt="Iran" src="/Views/Assets/data/about.jpg" />
+                                </figure>
+                            </div>
                             <div class="item-desc">
                                 <h2 class="item-title">About us</h2>
                                 <div class="item-text">
