Menu items added

--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -120,12 +120,11 @@
                 <div class="row footer-menu">
                     <div class="col-xs-5 col-sm-3 col-md-2">
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <!--<li><a href="#">Categories</a></li>
-                            <li><a href="#">Travelog</a></li>-->
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Iran 360</a></li>
-                            <!--<li><a href="#">Witness</a></li>-->
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/category/Gallery/125">Gallery</a></li>
+                            <li><a href="/panorama">Iran 360</a></li>
+                            <li><a href="/about-us">About Us</a></li>
+                            <li><a href="/contact-us">Contact Us</a></li>
                         </ul>
                     </div>
                     <!--<div class="col-xs-5 col-sm-3 col-md-2">
