--- a/TCMSFRONTEND/Views/Modules/Menu/Menu.html
+++ b/TCMSFRONTEND/Views/Modules/Menu/Menu.html
@@ -24,6 +24,8 @@
         <!--<li><a href="#">Travelog</a></li>-->
         <li><a href="/category/Gallery/125">Gallery</a></li>
         <li><a href="/panorama">Iran 360</a></li>
+        <li><a href="/about-us">About Us</a></li>
+        <li><a href="/contact-us">Contact Us</a></li>
         <!--<li><a href="#">Witness</a></li>-->
     </ul>
 </nav>
