--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -135,6 +135,7 @@
                         <ul>
                             <li><a href="/">Home</a></li>
                             <li><a href="/category/Gallery/125">Gallery</a></li>
+                            <li><a href="/category/time-lapse/158">Time-Lapse</a></li>
                             <li><a href="/panorama">Iran 360</a></li>
                             <li><a href="/about-us">About Us</a></li>
                             <li><a href="/contact-us">Contact Us</a></li>
