Bugfix in itemlist module

--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -197,7 +197,7 @@
 				&:hover { text-decoration: none; }
 				span {
 				    &.title { font-size: 20px; color: @green; margin-bottom: 4px; }
-				    &.desc { color: lighten(@text-color, 20%); }
+				    &.desc { color: lighten(@text-color, 20%); overflow: hidden; height: 60px; }
 				}
 				&:hover {
 				    span.title { color: darken(@green, 5%); }
