--- a/TCMSFRONTEND/Views/Pages/index.html
+++ b/TCMSFRONTEND/Views/Pages/index.html
@@ -175,7 +175,7 @@
     <div class="hide popover-contents">
         <div id="search-form">
             <div id="search-form-inner">
-                <form action="#" method="get">
+                <form action="/search" method="get">
                     <div class="form-group">
                         <input type="text" name="q" class="form-control" placeholder="Search..." />
                         <button type="submit" class="_transparent"><i class="icon-search"></i></button>
