Bugfixes and responsive updates

--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -16,7 +16,7 @@
                 {{#if description}}
                 <img alt="{{description}}" src="{{imagePath}}" />
                 <figcaption>{{description}}</figcaption>
-                {{#else}}
+                {{else}}
                 <img alt="{{Title}}" src="{{imagePath}}" />
                 {{/if}}
             </figure>
