Bugfic in item image

--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -14,10 +14,10 @@
             {{else}}
             <figure>
                 {{#if description}}
-                <img alt="{{description}}" src="{{imagePath}}" />
+                <img alt="{{description}}" src="{{image}}" />
                 <figcaption>{{description}}</figcaption>
                 {{else}}
-                <img alt="{{Title}}" src="{{imagePath}}" />
+                <img alt="{{Data.Title}}" src="{{Data.image}}" />
                 {{/if}}
             </figure>
             {{/if}}
