* Contact Us edited

--- a/TCMSFRONTEND/Views/Modules/Static/Contact.html
+++ b/TCMSFRONTEND/Views/Modules/Static/Contact.html
@@ -5,8 +5,8 @@
             <div class="item-text">
                 <div class="introtext">
                     <p><strong><span class="">Fax: </span>+98 21 23066529</strong></p>
-                    <p><strong>Email: <a href="mailto:iran@presstv.com"><span class="">Iran@presstv.com</span></a></strong></p>
-                    <p><strong>Facebook: <a href="https://www.facebook.com/IranPressTV"><span class="">iran Program on Facebook</span></a></strong></p>
+                    <p><strong>Email: <a href="mailto:iran@presstv.com"><span class=""> Iran@presstv.com</span></a></strong></p>
+                    <p><strong>Facebook: <a href="https://www.facebook.com/IranPressTV"><span class=""> Iran Program</span></a></strong></p>
                     <p><strong>Youtube: <a href="https://www.youtube.com/user/iranprogrampresstv"><span class="">https://www.youtube.com/user/iranprogrampresstv</span></a></strong></p>
                 </div>
             </div>
