* Title short title

--- a/TCMSFRONTEND/Views/Modules/ContentsList/ItemTiles.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/ItemTiles.html
@@ -16,7 +16,7 @@
                             </a>
                         </div>
                         <div class="desc">
-                            <h4><a href="{{url}}">{{ShortTitle}}</a></h4>
+                            <h4><a href="{{url}}">{{Title}}</a></h4>
                         </div>
                     </div>
                 </li>
