--- a/TCMSFRONTEND/Views/Modules/ContentsList/Topnews.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/Topnews.html
@@ -8,7 +8,7 @@
                     <figcaption>
                         <h3>
                             <a href="{{url}}">
-                                <span class="title">{{ShortTitle}}</span>
+                                <span class="title">{{Title}}</span>
                                 <span class="desc hidden-sm hidden-xs">{{Introtext}}</span>
                             </a>
                         </h3>
