--- a/TCMSFRONTEND/Views/Modules/ContentsList/TilesGalleries.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/TilesGalleries.html
@@ -14,7 +14,7 @@
                     <a href="{{url}}"><img src="{{image}}" alt="{{Title}}" /></a>
                     <figcaption>
                         <a href="{{url}}">
-                            <span class="title">{{ShortTitle}}</span>
+                            <span class="title">{{Title}}</span>
                             <span class="desc">{{Introtext}}</span>
                         </a>
                     </figcaption>
