Fixed items height in responsive

--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -22,14 +22,14 @@
 	ul {
 	    margin-bottom: 0; list-style: none; padding: 0;
 	    li {
-		margin-bottom: @grid-gutter-width; max-height: 292px; overflow: hidden;
+		margin-bottom: @grid-gutter-width; max-height: 255px; overflow: hidden; height: 255px;
 		figure {
 		    border: 3px solid @green;
 		    & > a, & > img {
 			display: block; min-height: 50px;
 		    }
 		    figcaption {
-			text-align: center; background: @white; max-height: 100px; overflow: hidden;
+			text-align: center; background: @white; max-height: 102px; overflow: hidden;
 			& > a {
 			    color: @green; padding: 6px 0; display: block;
 			    &:hover, &:focus, &:active {
