--- a/TCMSFRONTEND/Views/Assets/less/project/panels.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/panels.less
@@ -18,65 +18,65 @@
     }
     // Panel Types
     &.tiles {
-	margin-bottom: 0;
-	ul {
-	    margin-bottom: 0; list-style: none; padding: 0;
-	    li {
-		margin-bottom: @grid-gutter-width; max-height: 255px; overflow: hidden; height: 255px;
-		figure {
-		    border: 3px solid @green;
-		    & > a, & > img {
-			display: block; min-height: 50px;
-		    }
-		    figcaption {
-			text-align: center; background: @white; max-height: 102px; overflow: hidden;
-			& > a {
-			    color: @green; padding: 6px 0; display: block;
-			    &:hover, &:focus, &:active {
-				text-decoration: none; color: @green;
-			    }
-			    span {
-				display: block;
-				&.title { font-weight: bold; font-size: 16px; line-height: @line-height-base; padding: 3px 5px; max-height: 52px; overflow: hidden; }
-				&.desc { color: @gray; line-height: 20px; font-size: 13px; padding: 0 5px; max-height: 60px; overflow: hidden; }
-			    }
-			}
-		    }
-		}
-		&:hover {
-		    figure {
-			border-color: @grayLight;
-		    }
-		}
-	    }
-	}
-	&.galleries {
+	    margin-bottom: 0;
 	    ul {
-		li {
-		    max-height: auto;
+	        margin-bottom: 0; list-style: none; padding: 0;
+	        li {
+		    margin-bottom: @grid-gutter-width; max-height: 255px; overflow: hidden; height: 255px;
 		    figure {
-			border-color: @grayMid; position: relative; overflow: hidden;
-			figcaption {
-			    position: absolute; width: 100%; height: 100%; top: 400px; transition: all 0.4s; opacity: 0; text-align: left; padding: 10px; background: rgba(0, 0, 0, 0.8); max-height: auto;
+		        border: 3px solid @green;
+		        & > a, & > img {
+			    display: block; min-height: 50px;
+		        }
+		        figcaption {
+			    text-align: center; background: @white; max-height: 102px; overflow: hidden;
 			    & > a {
-				span {
-				    &.title { padding-top: 0px; max-height: 48px; }
-				    &.desc { line-height: @line-height-base; color: @white; }
-				}
+			        color: @green; padding: 6px 0; display: block;
+			        &:hover, &:focus, &:active {
+				    text-decoration: none; color: @green;
+			        }
+			        span {
+				    display: block;
+				    &.title { font-weight: bold; font-size: 16px; line-height: @line-height-base; padding: 3px 5px; max-height: 52px; overflow: hidden; }
+				    &.desc { color: @gray; line-height: 20px; font-size: 13px; padding: 0 5px; max-height: 60px; overflow: hidden; }
+			        }
 			    }
-			}
+		        }
 		    }
 		    &:hover {
-			figure {
-			    border-color: @green;
-			    figcaption {
-				top: 0; opacity: 1;
-			    }
-			}
+		        figure {
+			    border-color: @grayLight;
+		        }
 		    }
-		}
+	        }
 	    }
-	}
+	    &.galleries {
+	        ul {
+		        li {
+		            max-height: none; height: 146px; overflow: hidden;
+		            figure {
+			            border-color: @grayMid; position: relative; overflow: hidden;
+			            figcaption {
+			                position: absolute; width: 100%; /*height: 100%;*/ bottom: -400px; transition: all 0.4s; opacity: 0; text-align: left; padding: 10px; background: rgba(0, 0, 0, 0.8); max-height: auto;
+			                & > a {
+				            span {
+				                &.title { padding-top: 0px; max-height: 48px; }
+				                &.desc { line-height: @line-height-base; color: @white; }
+				            }
+			                }
+			            }
+		            }
+		            &:hover {
+			            figure {
+			                border-color: @green;
+			                figcaption {
+				                bottom: 0; opacity: 1;
+			                }
+			            }
+		            }
+		        }
+	        }
+	    }
     }
     &.showcase {
 	margin: @grid-gutter-width 0;
