--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -1,4 +1,3 @@
-
 <div class="panel item">
     <section class="panel-body">
         <div class="item-media">
@@ -12,14 +11,25 @@
                 {{/each}}
             </figure>
             {{else}}
-            <figure>
-                {{#if description}}
-                <img alt="{{description}}" src="{{image}}" />
-                <figcaption>{{description}}</figcaption>
+                {{#if Data.Images}}
+                <figure>
+                    {{#if description}}
+                    <img alt="{{description}}" src="{{image}}" />
+                    <figcaption>{{description}}</figcaption>
+                    {{else}}
+                    <img alt="{{Data.Title}}" src="{{Data.image}}" />
+                    {{/if}}
+                </figure>
                 {{else}}
-                <img alt="{{Data.Title}}" src="{{Data.image}}" />
+                    {{#each Data.Images}}
+                        {{#if description}}
+                        <img alt="{{description}}" src="{{imagePath}}" />
+                        <figcaption>{{description}}</figcaption>
+                        {{else}}
+                        <img alt="{{Data.Title}}" src="{{imagePath}}" />
+                        {{/if}}
+                    {{/each}}
                 {{/if}}
-            </figure>
             {{/if}}
         </div>
         <div class="item-desc">
