--- a/TCMSFRONTEND/Views/Assets/less/project/item.less
+++ b/TCMSFRONTEND/Views/Assets/less/project/item.less
@@ -4,12 +4,22 @@
 	& > * { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); background: @white; margin-bottom: (@grid-gutter-width / 2); }
     }
     .item-media {
-	figure {
-	    position: relative; max-height: 421px;
-	    img { display: block; width: 100%; height: auto; }
-	    figcaption { position: absolute; bottom: 0; left: 0; width: 100%; background: black; background: rgba(0, 0, 0, 0.7); padding: 4px 10px; color: @white; line-height: 24px; }
-        object { min-height: 421px; }
-	}
+        position:relative; max-height: 421px; overflow: hidden;
+        .item-media-inner { position: relative; z-index: 100; }
+	    figure {
+	        position: relative; max-height: 421px;
+	        img { display: block; width: 100%; height: auto; }
+	        figcaption { position: absolute; bottom: 0; left: 0; width: 100%; background: black; background: rgba(0, 0, 0, 0.7); padding: 4px 10px; color: @white; line-height: 24px; }
+            object { min-height: 421px; }
+	    }
+        .controls {
+            position: absolute; top: 50%; left: 0; width: 100%; height: 0; overflow: visible; margin-top: -20px; z-index: 900;
+            a {
+                display: block; float: left; width: 40px; height: 60px; background: transparent; line-height: 60px; text-align: center; opacity: 0.8; transition: 0.2s all; color: #fff; text-shadow: 0 0 3px #777; font-size: 24px;
+                &:hover { background: rgba(0, 0, 0, 0.8); opacity: 1; }
+                &.next { float: right; }
+            }
+        }
     }
     .item-sharing {
 	& > .inner { padding: 10px; }
