--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -25,7 +25,7 @@
                 
                 {{/if}}
             </div>
-            <div class="controls">
+            <div class="controls hide">
                 <a href="#" class="prev"><i class="icon-left"></i></a>
                 <a href="#" class="next"><i class="icon-right"></i></a>
             </div>
