Working on Tourism slideshow module

--- a/TCMSFRONTEND/Views/Modules/ContentsList/TourismSlideshow-callback.html
+++ b/TCMSFRONTEND/Views/Modules/ContentsList/TourismSlideshow-callback.html
@@ -7,8 +7,8 @@
                     <img src="{{image}}" alt="{{Title}}" />
                 </div>
                 <div class="desc">
-                    <h3 class="title">
-                        <a href="http://iran.presstv.com{{url}}">
+                    <h3 class="title" style="direction: ltr; text-align: left; float: left; padding-left: 20px; padding-right: 0;">
+                        <a href="http://iran.presstv.com{{url}}" target="_blank">
                             {{Title}}
                             <span>{{Introtext}}</span>
                         </a>
@@ -21,8 +21,8 @@
             <a href="#" class="prev"><i class="icon-left-open-big"></i></a>
             <a href="#" class="next"><i class="icon-right-open-big"></i></a>
         </div>
-        <div class="pages"></div>
-        <div class="thumbs">
+        <div class="pages" style="float: right; left: auto; right: 10px;"></div>
+        <div class="thumbs" style="left: auto; right: 10px;">
             <div class="thumbs-carousel">
                 {{#each Data}}
                 <img src="{{image}}" alt="" />
