-Remove Introtext from show item

--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -33,9 +33,9 @@
         <div class="item-desc">
             <h2 class="item-title">{{Data.Title}}</h2>
             <div class="item-text">
-                <div class="introtext">
+                <!--<div class="introtext">
                     <p>{{Data.Introtext}}</p>
-                </div>
+                </div>-->
                 <div class="fulltext">{{{Data.Fulltext}}}</div>
             </div>
         </div>
